[gd_scene load_steps=17 format=2]

[ext_resource path="res://Battle/evolution/Evolution.gd" type="Script" id=1]
[ext_resource path="res://Assets/Forms/defFront.png" type="Texture" id=2]
[ext_resource path="res://Assets/Forms/spdSide.png" type="Texture" id=3]
[ext_resource path="res://Assets/Forms/strFront.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/cursorup.tex" type="Texture" id=5]
[ext_resource path="res://Fonts/SomepxLarge.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Fonts/Somepx.fnt" type="BitmapFont" id=7]
[ext_resource path="res://Assets/GUI/panel.tex" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/cursor.tex" type="Texture" id=9]


[node name="Evolution" type="Node2D"]


[node name="EvoBackground" type="ColorFrame" parent="."]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 0.0
margin_right = 320.0
margin_bottom = 288.0
color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="EvoChoices" type="Node2D" parent="EvoBackground"]


[node name="DefenseSprite" type="Sprite" parent="EvoBackground/EvoChoices"]

position = Vector2( 20, 20 )
texture = ExtResource( 2 )
centered = false

[node name="SpeedSprite" type="Sprite" parent="EvoBackground/EvoChoices"]

position = Vector2( 120, 20 )
texture = ExtResource( 3 )
centered = false

[node name="StrengthSprite" type="Sprite" parent="EvoBackground/EvoChoices"]

position = Vector2( 220, 20 )
texture = ExtResource( 4 )
centered = false

[node name="Cursor" type="Sprite" parent="EvoBackground"]

visible = false
position = Vector2( 40, 100 )
texture = ExtResource( 5 )
centered = false

[node name="ChoiceInfo" type="Control" parent="EvoBackground"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 130.0
margin_right = 320.0
margin_bottom = 200.0

[node name="ChoiceName" type="Label" parent="EvoBackground/ChoiceInfo"]

hint/tooltip = "Test"
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 20.0
margin_top = 20.0
margin_right = 60.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ChoiceDesc" type="Label" parent="EvoBackground/ChoiceInfo"]

hint/tooltip = "Test"
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 140.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EvoTextBox" type="NinePatchRect" parent="EvoBackground"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 1.5
margin_top = 200.0
margin_right = 326.5
margin_bottom = 295.0
texture = ExtResource( 8 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="EvoText" type="RichTextLabel" parent="EvoBackground/EvoTextBox"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 50.0
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0

[node name="EvoTextTimer" type="Timer" parent="EvoBackground/EvoTextBox"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[node name="EvoConfirm" type="Label" parent="EvoBackground/EvoTextBox"]

visible = false
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 100.0
margin_top = 50.0
margin_right = 140.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Yes"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EvoReject" type="Label" parent="EvoBackground/EvoTextBox"]

visible = false
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 160.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "No"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextCursor" type="Sprite" parent="EvoBackground/EvoTextBox"]

visible = false
texture = ExtResource( 9 )

[node name="EvoCamera" type="Camera2D" parent="."]

offset = Vector2( 160, 145 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2

[connection signal="timeout"  from="EvoBackground/EvoTextBox/EvoTextTimer"  to="EvoBackground" method="_on_EvoTextTimer_timeout" binds=[  ]]
